[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "hylight"
version = "0.0.1"
authors = [
  { name="Yuankang Liu", email="yuankang.liu@gmail.com" },
  { name="Tom Theuns", email='tom.theuns@gmail.com'}
]
description = "Atomic model for hydrogen recombination lines."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/YuankangLiu/HyLight"
Issues = "https://github.com/YuankangLiu/HyLight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/"]